telegram-bot Changelog
========================
1.9.24 - 2019/2/19
- Instant View 优化，当电影或影人未获奖时不显示相关文字
- 修复 urllib 保存 cookie后不会再次加载

1.9.23 - 2019/2/18
- 换用 ujson 解析，优化性能
- 优化日志输出

1.9.22 - 2019/2/17
- aiohttp 添加 cookie , header
- 修复某些时候不返回电影详情的问题

1.9.21 - 2019/2/16
- 基本性能优化
- 修复没有评分的情况

1.9.19 - 2019/2/15
- “电影、演员详情”弃用之前的图片加文字方式返回结果，改用 Instant View 呈现输出（嗯，舒服了）

1.8.19 - 2019/2/14
- 增加“获奖情况”功能，目前只针对“演员详情”开启
- 修复“演员详情”内容过多时不返回消息，telegram api 限制不超过 1024 个字符

1.8.17 - 2019/2/6
- 增加快捷搜索功能， 使用 Inline mode
- 原“电影搜索”，“演员搜索功能”已整合进“其它搜索方式“按钮中
- 返回值细节优化， 个别电影信息受到限制，直接返回url

1.7.16 - 2019/1/24
- 定时清除过期的词云图片
- 修复BUG：发送消息后返回无响应的提示

1.7.15 - 2019/1/24
- 添加演员搜索功能
- 更改电影详情消息发送方式
- 影评词云功能分离，不再强制推送

1.6.13 - 2019/1/21
- KeyboardButton自动收回
- 获取评论换用aiohttp
- 提高生成图片清晰度
- 不再使用matplotlib

1.6.9 - 2019/1/18
- 添加即将上映功能
- 添加新片榜功能
- 图片去除白边

1.4.8 - 2019/1/18
- 添加Keyboard Button
- 添加电影搜索功能
- 添加 webhook 方式并默认使用

1.3.6 - 2019/1/16
- 加入typing状态
- 添加电影详情功能
- 电影详情功能加入链接访问

1.2.4 - 2019/1/15
- 豆瓣页面修改，兼容更新

1.2.3 - 2018/4/14
- inline keyboard支持
- 预缓存(默认不开启，防止限速)
- 爬虫性能优化(已完成)
- 爬虫cookie（已完成)
- 代码可读性优化（已完成)

1.0.0 - 2018/4/17
bug修复，功能基本可用

0.1 < 1.0.0 - 2018/4
最初版本