@@ -1,12 +1,12 @@
-python-telegram-bot
-flask
-numpy
-beautifulsoup4
-jieba
-wordcloud
-matplotlib
-pandas
-lxml
 aiohttp
 aiograph
+beautifulsoup4
+flask
+jieba
+lxml
+matplotlib
+numpy
+pandas
+python-telegram-bot
 ujson
+wordcloud
