@@ -3,6 +3,7 @@ telegram-bot Changelog
 1.9.24 - 2019/2/19
 - Instant View 优化，当电影或影人未获奖时不显示相关文字
 - 修复 urllib 保存 cookie后不会再次加载
+- 修复 aiohttp session 传递后提示未关闭的问题
 
 1.9.23 - 2019/2/18
 - 换用 ujson 解析，优化性能
